--- a/ocr.bib
+++ b/ocr.bib
@@ -5,6 +5,7 @@
 @String{ICDAR = {Proceedings of the International Conference on Document Analysis and Recognition (ICDAR)}}
 @String{ICLR = {Proceedings of the International Conference on Learning Representations (ICLR)}}
 @String{NAACL = {Proceedings of the Conference on Human Language Technology of the North American Chapter of the Association for Computational Linguistics (HLT-NAACL)}}
+@String{SIGIR = {ACM SIGIR Int. Conf. on Research and Development in Information Retrieval}}
 
 
 @InProceedings{ayres13:_singin_supper,
@@ -50,6 +51,36 @@
   year =	 2009
 }
 
+@InProceedings{breuel13:_high_ocr_print_englis_frakt_lstm_networ,
+  author =	 {Thomas M. Breuel and Adnan Ul-Hasan and Mayce Al
+                  Azawi and Faisal Shafait},
+  title =	 {High-performance {OCR} for Printed {English} and
+                  {Fraktur} using {LSTM} Networks},
+  booktitle =	 ICDAR,
+  year =	 2013
+}
+
+@InProceedings{breuel17:_robus_simpl_page_segmen_hybrid,
+  author =	 {Thomas M. Breuel},
+  title =	 {Robust, Simple Page Segmentation using Hybrid
+                  Convolutional {MDLSTM} Networks},
+  booktitle =	 ICDAR,
+  year =	 2017
+}
+
+@Article{causer18:_makin_such_bargain,
+  author =	 {Tim Causer and Kris Grint and Anna-Maria Sichani and
+                  Melissa Terras},
+  title =	 {`Making Such Bargain': {Transcribe Bentham} and the
+                  Quality and Cost-Effectiveness of Crowdsourced
+                  Transcription},
+  journal =	 {Digital Scholarship in the Humanities},
+  year =	 2018,
+  volume =	 33,
+  number =	 3,
+  pages =	 {467-487}
+}
+
 @InProceedings{dong18:acl,
   author =	 {Rui Dong and David A. Smith},
   title =	 {Multi-Input Attention for Unsupervised {OCR}
@@ -60,6 +91,32 @@
   pdf = 	 {dong-smith-acl-2018.pdf}
 }
 
+@InProceedings{garrette15:_unsup_code_switc_multil_histor_docum_trans,
+  author =	 {Dan Garrette and Hannah Alpert-Abrams and Taylor
+                  Berg-Kirkpatrick and Dan Klein},
+  title =	 {Unsupervised Code-Switching for Multilingual
+                  Historical Document Transcription},
+  booktitle =	 NAACL,
+  year =	 2015
+}
+
+@InProceedings{henzinger06:_findin_near_duplic_web_pages,
+  author =	 {Monika Henzinger},
+  title =	 {Finding Near-Duplicate Web Pages: A Large-Scale
+                  Evaluation of Algorithms},
+  booktitle =	 SIGIR,
+  year =	 2006,
+  pages = 	 {284-291}
+}
+
+@Book{hodgson74:_ventur_islam,
+  author =	 {Marshall Hodgson},
+  title =	 {The Venture of {Islam}: Conscience and History in a
+                  World Civilization},
+  publisher =	 {University of Chicago Press},
+  year =	 1974
+}
+
 @Article{mak14:_archaeol_digit,
   author =	 {Bonnie Mak},
   title =	 {Archaeology of a Digitization},
@@ -68,6 +125,31 @@
   year =	 2014,
   volume =	 65,
   number =	 8
+}
+
+@Article{nelson17:_comput_groun_theor,
+  author =	 {Laura K. Nelson},
+  title =	 {Computational Grounded Theory},
+  journal =	 {Sociological Methods \& Research},
+  year =	 2017,
+  url =		 {http://doi.org/10.1177/0049124117729703}
+}
+
+@InProceedings{oliveira18,
+  author =	 {Sofia Ares Oliveira and Benoit Seguin and Frédéric
+                  Kaplan},
+  title =	 {{dhSegment}: A Generic Deep-Learning Approach for
+                  Document Segmentation},
+  booktitle =	 {Frontiers in Handwriting Recognition (ICFHR)},
+  year =	 2018,
+  pages =	 {7-12}
+}
+
+@Book{piper18:_enumer,
+  author =	 {Andrew Piper},
+  title =	 {Enumerations: Data and Literary Study},
+  publisher =	 {University of Chicago Press},
+  year =	 2018
 }
 
 @InProceedings{smith14:jcdl,
@@ -98,6 +180,15 @@
   number =	 1,
   year =	 1981,
   pages =	 {195-197}
+}
+
+@Unpublished{springmann16:_ocr_histor_print_applic_build_diach_corpor,
+  author =	 {Uwe Springmann and Anke Lüdeling},
+  title =	 {{OCR} of Historical Printings with an Application to
+                  Building Diachronic Corpora: A Case Study Using the
+                  {RIDGES} Herbal Corpus},
+  note =	 {arXiv preprint 1608.02153},
+  year =	 2016
 }
 
 @Article{stauffer12:_ninet_centur_archiv_digit_age,
