--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -202,7 +202,7 @@ We believe similarly experimental approaches to the errorful OCR archive could b
 
 Most OCR research and systems, meanwhile, have developed without reference to applications in the humanities and have focused on modern, Latin-script documents. While we will not survey the entire field here, we will note some exceptions to this trend and some current developments that show promise for fruitful collaboration between OCR and humanities researchers.
 
-While large-scale scanning projects have generally used off-the-shelf OCR products, several researchers on a smaller scale have found that domain-specific training and modeling provide significant gains in accuracy. The availability of open-source systems can give  scholars of particular languages the ability, though not always the computing and human resources, to build better systems. Bruce Robertson and colleagues have achieved significant improvements in OCR'ing ancient Greek using publisher-specific training sets and system combination.\footnote{\url{http://heml.mta.ca/lace/}}  Uwe Springmann and Anke Lüdeling (2016) found that, for historical German herbal manuals printed between 1487 and 1870, training on diplomatic transcriptions with matched typefaces achieved over 99\% character accuracy. More encouragingly, even training on different historical typefaces could achieve character accuracies above 90\%. That work showed what could be done by retraining existing models. Dan Garrette and colleagues (2015) built an unsupervised model to infer image and language models for historical texts mixing several languages.
+While large-scale scanning projects have generally used off-the-shelf OCR products, several researchers on a smaller scale have found that domain-specific training and modeling provide significant gains in accuracy. The availability of open-source systems can give  scholars of particular languages the ability, though not always the computing and human resources, to build better systems. Bruce Robertson and colleagues have achieved significant improvements in OCR'ing ancient Greek using publisher-specific training sets and system combination.\footnote{\url{http://heml.mta.ca/lace/}}  \cite{springmann16:_ocr_histor_print_applic_build_diach_corpor} found that, for historical German herbal manuals printed between 1487 and 1870, training on diplomatic transcriptions with matched typefaces achieved over 99\% character accuracy. More encouragingly, even training on different historical typefaces could achieve character accuracies above 90\%. That work showed what could be done by retraining existing models. Dan Garrette and colleagues \citeyearpar{garrette15:_unsup_code_switc_multil_histor_docum_trans} built an unsupervised model to infer image and language models for historical texts mixing several languages.
 
 Beyond these humanities-specific applications, the overall landscape of OCR research has shifted significantly in the last decade. OCR systems in the past often involved a pipeline of page layout analysis that involved splitting lines, words, and even characters into separate image patches, which would then be classified. With those pipelines, connected scripts such as Arabic or even historically common ligatures in Latin script would present fundamentally different problems from recognizing cleanly separable characters. More recently, most state-of-the-art OCR systems have adopted neural network models with recurrent and convolutional architectures to transcribe entire lines of text at once.\footnote{Many systems now use these architectures. For applications to historical and multilingual scripts in particular, see, e.g., Breuel et al. (2013) and Kiessling et al. (2017).}  These systems, therefore, exhibit much less of a gap between separated and connected scripts---or indeed, between print and manuscript. We expect, therefore, that the problems of historical and multilingual OCR will find a receptive audience in the OCR research community.
 
@@ -263,7 +263,7 @@ One natural response to OCR errors is to attempt to correct them. Even if we ign
 
 Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
-Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. Nelson (2017) conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences (Schofield et al., 2017).}  Franzini et al. (2018) showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable. Bamman et al. (2018) showed that the performance of part-of-speech tagging on OCR output could approach that on clean text but that syntactic parsing accuracy was more severely degraded by errors. Darweesh and Oard (2002) showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
+Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences (Schofield et al., 2017).}  Franzini et al. (2018) showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable. Bamman et al. (2018) showed that the performance of part-of-speech tagging on OCR output could approach that on clean text but that syntactic parsing accuracy was more severely degraded by errors. Darweesh and Oard (2002) showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
 
 These measurements of the effect of OCR errors on downstream tasks are useful. To be usefully applied by scholars and readers such as those we surveyed, however, we need both (1) effective methods for unsupervised error estimation that go beyond OCR systems' own confidence estimation and (2) effective approaches to communicating and visualizing the effect of errors on the task at hand.
 
@@ -500,21 +500,9 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 \bibliographystyle{plainnat}
 \bibliography{ocr}
 
-% <p class="c3"><span>&nbsp;Thomas M. Breuel, Adnan Ul-Hasan, Mayce Al Azawi, and Faisal Shafait (2013). High-performance OCR for printed English and Fraktur using LSTM Networks. In </span><span class="c9">ICDAR</span><span class="c2">.</span>
-
-% <p class="c3"><span>Thomas M. Breuel (2017). Robust, simple page segmentation using hybrid convolutional MDLSTM networks. In </span><span class="c9">ICDAR</span><span class="c2">.</span>
-
-% <p class="c3"><span>Tim Causer, Kris Grint, Anna-Maria Sichani, and Melissa Terras (2018). `Making such bargain': </span><span class="c9">Transcribe Bentham&nbsp;and the quality and cost-effectiveness of crowdsourced transcription. </span><span class="c9">Digital Scholarship in the Humanities</span><span class="c2">, 33(3):467--487.</span>
-
 % <p class="c3"><span>Greta Franzini (2012--span><span class="c9">A Catalogue of Digital Editions. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=https://zenodo.org/badge/latestdoi/42574907&amp;sa=D&amp;ust=1542739736291000">https://zenodo.org/badge/latestdoi/42574907</a></span>
 
 % <p class="c3"><span>Greta Franzini, Mike Kestemont, Gabriela Rotari, Melina Jander, Jeremi K. Ochab, Emily Franzini, Joanna Byszuk, Jan Rybicki (2018). Attributing authorship in the noisy digitized correspondence of Jacob and Wilhelm Grimm. </span><span class="c9">Frontiers in Digital Humanities, 5(4). </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=https://doi.org/10.3389/fdigh.2018.00004&amp;sa=D&amp;ust=1542739736291000">https://doi.org/10.3389/fdigh.2018.00004</a></span>
-
-% <p class="c3"><span>Dan Garrette, Hannah Alpert-Abrams, Taylor Berg-Kirkpatrick, and Dan Klein (2015). Unsupervised code-switching for multilingual historical document transcription. In </span><span class="c9">NAACL</span><span class="c2">.</span>
-
-% <p class="c3"><span>Monika Henzinger (2006). Finding near-duplicate web pages: A large-scale evaluation of algorithms. In </span><span class="c9">SIGIR</span><span class="c2">, pages 284--291.</span>
-
-% <p class="c3"><span>Marshall Hodgson (1974). </span><span class="c9">The Venture of Islam: Conscience and History in a World Civilization</span><span class="c2">, Vols 1-3. Chicago: The University of Chicago Press.</span>
 
 % <p class="c3"><span>Daniel J. Hopkins and Gary King (2010). A method of automated nonparametric content analysis for social science. </span><span class="c9">American Journal of Political Science, 54(1):229--247. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://doi.org/10.1111/j.1540-5907.2009.00428.x&amp;sa=D&amp;ust=1542739736292000">http://doi.org/10.1111/j.1540-5907.2009.00428.x</a></span>
 
@@ -537,14 +525,6 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 % <p class="c3"><span>Benjamin Meier, Thilo Stadelmann, Jan Stampfli, Marek Arnold, and Mark Cieliebak (2017). Fully convolutional neural networks for newspaper article segmentation. In </span><span class="c9">ICDAR, pages 414--419. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://doi.org/10.1109/ICDAR.2017.75&amp;sa=D&amp;ust=1542739736294000">http://doi.org/10.1109/ICDAR.2017.75</a></span>
 
 % <p class="c3"><span>Matthew Thomas Miller, Maxim Romanov, and Sarah Bowen Savant (2018). Digitizing the textual heritage of the premodern Islamicate world: Principles and plans. </span><span class="c9">International Journal of Middle Eastern Studies, 50:103--109.</span>
-
-% <p class="c3"><span>Laura K. Nelson (2017). Computational grounded theory. </span><span class="c9">Sociological Methods &amp; Research, </span><span class="c9">19(3). </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://doi.org/10.1177/0049124117729703&amp;sa=D&amp;ust=1542739736295000">http://doi.org/10.1177/0049124117729703</a></span>
-
-% <p class="c3"><span>Sofia Ares Oliveira, Benoit Seguin, and Fr&eacute;d&eacute;ric Kaplan (2018). dhSegment: A generic deep-learning approach for document segmentation. In </span><span class="c9">Frontiers in Handwriting Recognition (ICFHR)</span><span class="c2">, pages 7-12.</span>
-
-% <p class="c3"><span>Andrew Piper (2018). </span><span class="c9">Enumerations: Data and Literary Study</span><span class="c2">. University of Chicago Press.</span>
-
-% <p class="c3"><span class="c2">Uwe Springmann and Anke L&uuml;deling (2016). OCR of historical printings with an application to building diachronic corpora: A case study using the RIDGES herbal corpus. arXiv preprint 1608.02153.</span>
 
 \chapter{Appendices}
 
