--- a/nulab-ocr-report.tex
+++ b/nulab-ocr-report.tex
@@ -204,7 +204,7 @@ Most OCR research and systems, meanwhile, have developed without reference to ap
 
 While large-scale scanning projects have generally used off-the-shelf OCR products, several researchers on a smaller scale have found that domain-specific training and modeling provide significant gains in accuracy. The availability of open-source systems can give  scholars of particular languages the ability, though not always the computing and human resources, to build better systems. Bruce Robertson and colleagues have achieved significant improvements in OCR'ing ancient Greek using publisher-specific training sets and system combination.\footnote{\url{http://heml.mta.ca/lace/}}  \cite{springmann16:_ocr_histor_print_applic_build_diach_corpor} found that, for historical German herbal manuals printed between 1487 and 1870, training on diplomatic transcriptions with matched typefaces achieved over 99\% character accuracy. More encouragingly, even training on different historical typefaces could achieve character accuracies above 90\%. That work showed what could be done by retraining existing models. Dan Garrette and colleagues \citeyearpar{garrette15:_unsup_code_switc_multil_histor_docum_trans} built an unsupervised model to infer image and language models for historical texts mixing several languages.
 
-Beyond these humanities-specific applications, the overall landscape of OCR research has shifted significantly in the last decade. OCR systems in the past often involved a pipeline of page layout analysis that involved splitting lines, words, and even characters into separate image patches, which would then be classified. With those pipelines, connected scripts such as Arabic or even historically common ligatures in Latin script would present fundamentally different problems from recognizing cleanly separable characters. More recently, most state-of-the-art OCR systems have adopted neural network models with recurrent and convolutional architectures to transcribe entire lines of text at once.\footnote{Many systems now use these architectures. For applications to historical and multilingual scripts in particular, see, e.g., Breuel et al. (2013) and Kiessling et al. (2017).}  These systems, therefore, exhibit much less of a gap between separated and connected scripts---or indeed, between print and manuscript. We expect, therefore, that the problems of historical and multilingual OCR will find a receptive audience in the OCR research community.
+Beyond these humanities-specific applications, the overall landscape of OCR research has shifted significantly in the last decade. OCR systems in the past often involved a pipeline of page layout analysis that involved splitting lines, words, and even characters into separate image patches, which would then be classified. With those pipelines, connected scripts such as Arabic or even historically common ligatures in Latin script would present fundamentally different problems from recognizing cleanly separable characters. More recently, most state-of-the-art OCR systems have adopted neural network models with recurrent and convolutional architectures to transcribe entire lines of text at once.\footnote{Many systems now use these architectures. For applications to historical and multilingual scripts in particular, see, e.g., \cite{breuel13:_high_ocr_print_englis_frakt_lstm_networ} and \cite{kiessling17:_impor_new_devel_arabog_optic}.}  These systems, therefore, exhibit much less of a gap between separated and connected scripts---or indeed, between print and manuscript. We expect, therefore, that the problems of historical and multilingual OCR will find a receptive audience in the OCR research community.
 
 \section{Scope of this Report}
 
@@ -263,7 +263,7 @@ One natural response to OCR errors is to attempt to correct them. Even if we ign
 
 Even with these advances in OCR post-correction, errors will remain. To be sure, it is perfectly valid to evaluate OCR transcripts for their adequacy as reading texts, as it is to train post-correction systems to produce better transcripts according to this metric. But reading a consecutive string is not the only text-analysis task that scholars can perform on digitized corpora. As mentioned above, the most common use for OCR is full-text search. In addition, researchers may wish to apply the same panoply of analysis methods to OCR transcripts that they deploy on other texts: text classification, word clustering and embedding, topic models, part-of-speech taggers, syntactic parsers, text-reuse analysis, and so on. Since scholars naturally are disinclined to devote time on data that turn out not to be useful, it is difficult to assess ``how dirty is too dirty'' for different tasks by meta-analysis of existing work, an example of the``file-drawer effect''.
 
-Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences (Schofield et al., 2017).}  Franzini et al. (2018) showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable. Bamman et al. (2018) showed that the performance of part-of-speech tagging on OCR output could approach that on clean text but that syntactic parsing accuracy was more severely degraded by errors. Darweesh and Oard (2002) showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
+Scholars seeking to make these decisions about whether to apply text analysis methods to OCR can look to some results in the literature. \cite{nelson17:_comput_groun_theor} conducted experiments on performing a topic-model content analysis of social movements on both clean and OCR'd text.\footnote{While Nelson's robustness findings for topic models are encouraging, it is worth noting that large, mass-digitized collections are often also redundant. Large amounts of reuse and reprinting can lead to large variations in topic model inferences \citep{schofield16:_compar_apple}.}  \cite{franzini18:_attrib_author_noisy_digit_corres} showed the effect of handwritten text recognition errors on text categorization for author attribution and stylometry. In both cases, results on clean and automatically transcribed data were comparable. Bamman et al. (2018) showed that the performance of part-of-speech tagging on OCR output could approach that on clean text but that syntactic parsing accuracy was more severely degraded by errors. Darweesh and Oard (2002) showed that information retrieval models performed robustly for (simulated) Arabic OCR errors, particularly cross-language retrieval systems where translating between query and document terms improved recall. Scholars in the humanities, social sciences, and beyond have of course applied other text analysis techniques to digitized sources. Performing social network analysis on extracted named entities, for instance, has become important in many disciplines. We would be interested to see how these tasks are affected by transcription errors.
 
 These measurements of the effect of OCR errors on downstream tasks are useful. To be usefully applied by scholars and readers such as those we surveyed, however, we need both (1) effective methods for unsupervised error estimation that go beyond OCR systems' own confidence estimation and (2) effective approaches to communicating and visualizing the effect of errors on the task at hand.
 
@@ -326,9 +326,9 @@ What is needed, we propose, are first of all experiments and discussions among h
 
 \paragraph{Recommendation narrative:}
 
-Several researchers and practitioners in our survey pointed out the lack of training data for OCR in many languages, scripts, historical periods, and genres. Even with unsupervised models, there is still a need for evaluation data to check the appropriateness of modeling choices. Many projects, such as the Open Islamicate Texts Initiative (OpenITI), affirmed that the most important part of their work was in crowdsourcing the transcription of documents to create training data (Miller et al., 2018).
+Several researchers and practitioners in our survey pointed out the lack of training data for OCR in many languages, scripts, historical periods, and genres. Even with unsupervised models, there is still a need for evaluation data to check the appropriateness of modeling choices. Many projects, such as the Open Islamicate Texts Initiative (OpenITI), affirmed that the most important part of their work was in crowdsourcing the transcription of documents to create training data \citep{miller18:_digit_textual_herit_premod_islam_world}.
 
-We see, however, that coexisting with this scarcity of training data, there are a wealth of transcription projects. Some scholars have even framed the return of philology as a major current in the field of digital humanities (McGann, 2014). Greta Franzini's (2012--) \emph{Catalogue of Digital Editions}, for example, contains, as of April 2018, links to 292 scholarly projects with transcriptions of books and manuscripts.
+We see, however, that coexisting with this scarcity of training data, there are a wealth of transcription projects. Some scholars have even framed the return of philology as a major current in the field of digital humanities \citep{mcgann14:_new_repub_letter}. Greta Franzini's \citeyearpar{franzini12:_catal_digit_edition} \emph{Catalogue of Digital Editions}, for example, contains, as of April 2018, links to 292 scholarly projects with transcriptions of books and manuscripts.
 
 We propose that progress in OCR could be accelerated by exploiting existing digital editions to provide ground-truth training and test data. Practically, this involves aligning existing manual transcriptions with page images from sufficiently close exemplars. Editorial practices vary, of course, and range from ones that modernize spelling and punctuation, to ones that record variant glyphs and font conventions, to manuscript editions that reconstruct the contours of the writing surface in three dimensions. While the improvements that could be made with distant supervision from different kinds of editions should be empirically measured, it will me more useful if manual transcripts and page images are from the same edition. This implies that text and image should align at both the page and the line level. In some cases, we will be able to make use of digital editions that make explicit links between page transcriptions and page images and only the line-level alignment will need to be inferred; in other cases, we will need to automatically align pages, as well.
 
@@ -499,32 +499,6 @@ We therefore propose the founding of an ``OCR Service Bureau'', housed in a libr
 
 \bibliographystyle{plainnat}
 \bibliography{ocr}
-
-% <p class="c3"><span>Greta Franzini (2012--span><span class="c9">A Catalogue of Digital Editions. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=https://zenodo.org/badge/latestdoi/42574907&amp;sa=D&amp;ust=1542739736291000">https://zenodo.org/badge/latestdoi/42574907</a></span>
-
-% <p class="c3"><span>Greta Franzini, Mike Kestemont, Gabriela Rotari, Melina Jander, Jeremi K. Ochab, Emily Franzini, Joanna Byszuk, Jan Rybicki (2018). Attributing authorship in the noisy digitized correspondence of Jacob and Wilhelm Grimm. </span><span class="c9">Frontiers in Digital Humanities, 5(4). </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=https://doi.org/10.3389/fdigh.2018.00004&amp;sa=D&amp;ust=1542739736291000">https://doi.org/10.3389/fdigh.2018.00004</a></span>
-
-% <p class="c3"><span>Daniel J. Hopkins and Gary King (2010). A method of automated nonparametric content analysis for social science. </span><span class="c9">American Journal of Political Science, 54(1):229--247. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://doi.org/10.1111/j.1540-5907.2009.00428.x&amp;sa=D&amp;ust=1542739736292000">http://doi.org/10.1111/j.1540-5907.2009.00428.x</a></span>
-
-% <p class="c3"><span>Benjamin Kiessling, Matthew Thomas Miller, Maxim G. Romanov, and Sarah Bowen Savant (2017). Important new developments in Arabographic optical character recognition (OCR). </span><span class="c9">Al-&#703;U&#7779;&#363;r al-Wus&#7789;&#257;&nbsp;25:1--17. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://islamichistorycommons.org/mem/wp-content/uploads/sites/55/2017/11/UW-25-Savant-et-al.pdf&amp;sa=D&amp;ust=1542739736292000">http://islamichistorycommons.org/mem/wp-content/uploads/sites/55/2017/11/UW-25-Savant-et-al.pdf</a></span>
-
-% <p class="c3"><span>Gary King, Patrick Lam, and Margaret E. Roberts (2017). Computer-assisted keyword and document set discovery from unstructured text. </span><span class="c9">American Journal of Political Science, 61(4):971-988. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://j.mp/2nxUa8N&amp;sa=D&amp;ust=1542739736293000">http://j.mp/2nxUa8N</a></span>
-
-% <p class="c3"><span>Okan Kolak, William Byrne, and Philip Resnik (2003). A generative, probabilistic OCR model for NLP applications. In </span><span class="c9">NAACL</span><span class="c2">, pages 55--62.</span>
-
-% <p class="c3"><span>Gary Kopec and Mauricio Lomelin (1996). Document-specific character template estimation. In </span><span class="c9">Proceedings of the International Society for Optics and Photonics</span><span class="c2">.</span>
-
-% <p class="c3"><span>William B. Lund, Douglas J. Kennard, and Eric K. Ringger (2013). Why multiple document image binarizations improve OCR. In </span><span class="c9">Workshop on Historical Document Imaging and Processing</span><span class="c2">.</span>
-
-% <p class="c3"><span>William B. Lund, Daniel D. Walker, and Eric K. Ringger (2011). Progressive alignment and discriminative error correction for multiple OCR engines. In </span><span class="c9">ICDAR</span><span class="c2">.</span>
-
-% <p class="c3"><span>Manuel Mager, Ximena Gutierrez-Vasques, Gerardo Sierra, Ivan Meza (2018). Challenges of language technologies for the indigenous languages of the Americas. In </span><span class="c9">COLING.</span>
-
-% <p class="c3"><span>Jerome McGann (2014). </span><span class="c9">A New Republic of Letters: Memory and Scholarship in the Age of Digital Reproduction</span><span class="c2">. Harvard University Press.</span>
-
-% <p class="c3"><span>Benjamin Meier, Thilo Stadelmann, Jan Stampfli, Marek Arnold, and Mark Cieliebak (2017). Fully convolutional neural networks for newspaper article segmentation. In </span><span class="c9">ICDAR, pages 414--419. </span><span class="c1"><a class="c4" href="https://www.google.com/url?q=http://doi.org/10.1109/ICDAR.2017.75&amp;sa=D&amp;ust=1542739736294000">http://doi.org/10.1109/ICDAR.2017.75</a></span>
-
-% <p class="c3"><span>Matthew Thomas Miller, Maxim Romanov, and Sarah Bowen Savant (2018). Digitizing the textual heritage of the premodern Islamicate world: Principles and plans. </span><span class="c9">International Journal of Middle Eastern Studies, 50:103--109.</span>
 
 \chapter{Appendices}
 
