--- a/ocr.bib
+++ b/ocr.bib
@@ -91,6 +91,26 @@
   pdf = 	 {dong-smith-acl-2018.pdf}
 }
 
+@Misc{franzini12:_catal_digit_edition,
+  author =	 {Greta Franzini},
+  title =	 {A Catalogue of Digital Editions},
+  url =		 {https://github.com/gfranzini/digEds_cat},
+  year =	 {2012--}
+}
+
+@Article{franzini18:_attrib_author_noisy_digit_corres,
+  author =	 {Greta Franzini and Mike Kestemont and Gabriela
+                  Rotari and Melina Jander and Jeremi K. Ochab and
+                  Emily Franzini and Joanna Byszuk and Jan Rybicki},
+  title =	 {Attributing Authorship in the Noisy Digitized
+                  Correspondence of {Jacob} and {Wilhelm} {Grimm}},
+  journal =	 {Frontiers in Digital Humanities},
+  year =	 2018,
+  volume =	 5,
+  number =	 4,
+  url =		 {https://doi.org/10.3389/fdigh.2018.00004}
+}
+
 @InProceedings{garrette15:_unsup_code_switc_multil_histor_docum_trans,
   author =	 {Dan Garrette and Hannah Alpert-Abrams and Taylor
                   Berg-Kirkpatrick and Dan Klein},
@@ -117,6 +137,90 @@
   year =	 1974
 }
 
+@Article{hopkins10:_method_autom_nonpar_conten_analy_social_scien,
+  author =	 {Daniel J. Hopkins and Gary King},
+  title =	 {A Method of Automated Nonparametric Content Analysis
+                  for Social Science},
+  journal =	 {American Journal of Political Science},
+  year =	 2010,
+  volume =	 54,
+  number =	 1,
+  pages =	 {229-247},
+  url =		 {http://doi.org/10.1111/j.1540-5907.2009.00428.x}
+}
+
+@Article{kiessling17:_impor_new_devel_arabog_optic,
+  author =	 {Benjamin Kiessling and Matthew Thomas Miller and
+                  Maxim G. Romanov and Sarah Bowen Savant},
+  title =	 {Important New Developments in {Arabographic} Optical
+                  Character Recognition ({OCR})},
+  journal =	 {Al-ʿUṣūr al-Wusṭā},
+  year =	 2017,
+  volume =	 25,
+  pages =	 {1-17},
+  url =
+                  {http://islamichistorycommons.org/mem/wp-content/uploads/sites/55/2017/11/UW-25-Savant-et-al.pdf}
+}
+
+@Article{king17:_comput_assis_keywor_docum_set,
+  author =	 {Gary King and Patrick Lam and Margaret E. Roberts},
+  title =	 {Computer-Assisted Keyword and Document Set Discovery
+                  from Unstructured Text},
+  journal =	 {American Journal of Political Science},
+  year =	 2017,
+  volume =	 61,
+  number =	 4,
+  pages =	 {971-988},
+  url =		 {http://j.mp/2nxUa8N}
+}
+
+@inproceedings{kolak2003generative,
+  title =	 {A generative probabilistic {OCR} model for {NLP}
+                  applications},
+  author =	 {Kolak, Okan and Byrne, William and Resnik, Philip},
+  booktitle =	 NAACL,
+  pages =	 {55--62},
+  year =	 {2003}
+}
+
+@InProceedings{kopec96:_docum_charac_templ_estim,
+  author =	 {Gary Kopec and Mauricio Lomelin},
+  title =	 {Document-specific Character Template Estimation},
+  booktitle =	 {Proceedings of the International Society for Optics
+                  and Photonics},
+  year =	 1996
+}
+
+@InProceedings{lund13:_why_multip_docum_image_binar_improv_ocr,
+  author =	 {William B. Lund and Douglas J. Kennard and Eric
+                  K. Ringger},
+  title =	 {Why Multiple Document Image Binarizations Improve
+                  {OCR}},
+  booktitle =	 {Workshop on Historical Document Imaging and
+                  Processing},
+  year =	 2013
+}
+
+@inproceedings{lund2011progressive,
+  title =	 {Progressive alignment and discriminative error
+                  correction for multiple {OCR} engines},
+  author =	 {Lund, William B. and Walker, Daniel D. and Ringger,
+                  Eric K.},
+  booktitle =	 ICDAR,
+  pages =	 {764--768},
+  year =	 {2011}
+} 
+
+@InProceedings{mager18:_chall_languag_techn_indig_languag_americ,
+  author =	 {Manuel Mager and Ximena Gutierrez-Vasques and
+                  Gerardo Sierra and Ivan Meza},
+  title =	 {Challenges of Language Technologies for the
+                  Indigenous Languages of the {Americas}},
+  booktitle =	 {Proceedings of the International Conference on
+                  Computational Linguistics (COLING)},
+  year =	 2018
+}
+
 @Article{mak14:_archaeol_digit,
   author =	 {Bonnie Mak},
   title =	 {Archaeology of a Digitization},
@@ -127,11 +231,43 @@
   number =	 8
 }
 
+@Book{mcgann14:_new_repub_letter,
+  author =	 {Jerome McGann},
+  title =	 {A New Republic of Letters: Memory and Scholarship in
+                  the Age of Digital Reproduction},
+  publisher =	 {Harvard University Press},
+  year =	 2014
+}
+
+@InProceedings{meier17:_fully_convol_neural_networ_newsp_artic_segmen,
+  author =	 {Benjamin Meier and Thilo Stadelmann and Jan Stampfli
+                  and Marek Arnold and Mark Cieliebak},
+  title =	 {Fully Convolutional Neural Networks for Newspaper
+                  Article Segmentation},
+  booktitle =	 ICDAR,
+  year =	 2017,
+  pages =	 {414-419},
+  url =		 {http://doi.org/10.1109/ICDAR.2017.75}
+}
+
+@Article{miller18:_digit_textual_herit_premod_islam_world,
+  author =	 {Matthew Thomas Miller and Maxim Romanov and Sarah
+                  Bowen Savant},
+  title =	 {Digitizing the Textual Heritage of the Premodern
+                  Islamicate World: Principles and Plans},
+  journal =	 {International Journal of Middle Eastern Studies},
+  year =	 2018,
+  volume =	 50,
+  pages =	 {103-109}
+}
+
 @Article{nelson17:_comput_groun_theor,
   author =	 {Laura K. Nelson},
   title =	 {Computational Grounded Theory},
   journal =	 {Sociological Methods \& Research},
   year =	 2017,
+  volume = 	 {19},
+  number = 	 {3},
   url =		 {http://doi.org/10.1177/0049124117729703}
 }
 
@@ -150,6 +286,17 @@
   title =	 {Enumerations: Data and Literary Study},
   publisher =	 {University of Chicago Press},
   year =	 2018
+}
+
+@Article{schofield16:_compar_apple,
+  author =	 {Alexandra Schofield and David Mimno},
+  title =	 {Comparing apples to {Apple}: The Effects of Stemmers
+                  on Topic Models},
+  journal =	 {Transactions of the Association for Computational
+                  Linguistics},
+  year =	 2016,
+  volume =	 4,
+  pages =	 {287-300}
 }
 
 @InProceedings{smith14:jcdl,
