--- a/ocr.bib
+++ b/ocr.bib
@@ -81,6 +81,14 @@
   pages =	 {467-487}
 }
 
+@InProceedings{darwish02:_term_selec_searc_print_arabic,
+  author =	 {Kareem Darwish and Douglas W. Oard},
+  title =	 {Term Selection for Searching Printed {Arabic}},
+  booktitle =	 SIGIR,
+  year =	 2002,
+  pages =	 {261-268}
+}
+
 @InProceedings{dong18:acl,
   author =	 {Rui Dong and David A. Smith},
   title =	 {Multi-Input Attention for Unsupervised {OCR}
@@ -288,6 +296,16 @@
   year =	 2018
 }
 
+@Misc{randolph17:sourcelab,
+  author =	 {John Randolph},
+  title =	 {{SourceLab} (An Idea): Improving the Web for History
+                  by Building Digital Publishing into Undergraduate
+                  Education},
+  year =	 2017,
+  url =
+                  {http://scalar.usc.edu/works/sourcelab_idea/index.124}
+}
+
 @Article{schofield16:_compar_apple,
   author =	 {Alexandra Schofield and David Mimno},
   title =	 {Comparing apples to {Apple}: The Effects of Stemmers
@@ -413,3 +431,11 @@
   pages =	 {541-546}
 }
 
+@InProceedings{yalniz11:_partial_duplic_detec_large_book_collec,
+  author =	 {Ismet Zeki Yalniz and Ethem F. Can and R. Manmatha},
+  title =	 {Partial Duplicate Detection for Large Book
+                  Collections},
+  booktitle =	 CIKM,
+  year =	 2011,
+  pages = 	 {469-574}
+}
