--- a/ocr.bib
+++ b/ocr.bib
@@ -1,5 +1,6 @@
 @String{AAAI = {Proceedings of the AAAI Conference on Artificial Intelligence}}
 @String{ACL = {Proceedings of the Association for Computational Linguistics (ACL)}}
+@String{CIKM = {ACM Int. Conf. on Information and Knowledge Management (CIKM)}}
 @String{ECDL = {Proceedings of the European Conference on Digital Libraries (ECDL)}}
 @String{JCDL = {Proceedings of the ACM+IEEE-CS Joint Conference on Digital Libraries (JCDL)}}
 @String{ICDAR = {Proceedings of the International Conference on Document Analysis and Recognition (ICDAR)}}
@@ -197,6 +198,14 @@
   booktitle =	 {Proceedings of the International Society for Optics
                   and Photonics},
   year =	 1996
+}
+
+@InProceedings{schulz17:_multi_modul_domain_tailor_ocr_post_correc,
+  author =	 {Sarah Schulz and Jonas Kuhn},
+  title =	 {Multi-Modular Domain-Tailored {OCR} Post-Correction},
+  booktitle =	 EMNLP,
+  year =	 2017,
+  pages =	 {2716-2726}
 }
 
 @InProceedings{lund13:_why_multip_docum_image_binar_improv_ocr,
@@ -439,3 +448,14 @@
   year =	 2011,
   pages = 	 {469-574}
 }
+
+@Misc{berg-kirkpatrick18:_print_probab,
+  author =	 {Taylor Berg-Kirkpatrick and Max G'Sell and
+                  Christopher Warren},
+  title =	 {Print and Probability: A Statistical Approach to
+                  Analysis of Clandestine Publication},
+  institution =	 {Carnegie-Mellon University},
+  year =	 2018,
+  note =	 {NSF IIS \#1816311}
+}
+
